@startuml
'https://plantuml.com/class-diagram

class Jugador {
    +recibirAtaque(Enemigo: enemigo): void
    +sumarCreditos(int : cantidad): void
    +atacar(): void
    +VidaObtener() : int
    +restarCreditos(int creditos)
}

class Creditos {
    -valor: int
    +modificar(int : Valor): void
}

class Vida {
    -valor: int
    +modificar(int : Valor): void
    +cantidad() : int
}

class Score {
    +sumar(Enemigo : enemigo): void
}

abstract class Enemigo {
    +recibirAtaque(Defensa : defensa): void
    +destruirse(): void
    +atacar(Jugador : jugador): void
}

Enemigo ..> Jugador
Jugador  *--> Creditos
Jugador  *--> Vida
Score  o-->  Jugador

@enduml